--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: Survival
 main: to.joe.j2mc.survival.J2MC_Survival
 version: 0.1
-depend: [VanishNoPacket]
+depend: [VanishNoPacket, Maps]
 website: http://forums.joe.to
 author: Eviltechie
 description: Hunger games
@@ -21,16 +21,6 @@ commands:
     usage: /ready
     permission: j2mc.survival.ready
     permission-message: You may not indicate ready
-  lobby:
-    description: Teleport yourself to the lobby
-    usage: /lobby
-    permission: j2mc.survival.lobby
-    permission-message: You may not teleport yourself to the lobby
-  arena:
-    description: Teleport yourself to the arena
-    usage: /arena
-    permission: j2mc.survival.arena
-    permission-message: You may not teleport yourself to the arena
 permissions:
   j2mc.survival.join:
     description: Join the survival game
@@ -40,10 +30,4 @@ permissions:
     default: true
   j2mc.survival.ready:
     description: Toggle readiness to start
-    default: true
-  j2mc.survival.lobby:
-    description: Teleport to lobby
-    default: true
-  j2mc.survival.arena:
-    description: Teleport to arena
     default: true
